// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTable /> when there are many rows should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Chronos IX
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Titan
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            1,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            2050
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Chiron X
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Alpha Centauri A
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            10,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            2150
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Perseus XI
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Andromeda
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            100,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            3050
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<DataTable /> when there are no rows should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="5"
          >
            There are no matching space missions.
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<DataTable /> when there is no matching data should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="5"
          >
            There are no matching space missions.
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<DataTable /> with emptyMessage: component when there are no rows should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="5"
          >
            <span
              class="data-table-empty-message"
            >
              You are not going to space today.
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<DataTable /> with emptyMessage: string when there are no rows should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="5"
          >
            You are not going to space today.
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<DataTable /> with mapping: function should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-spaceMissions"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-mission-name"
          >
            Mission Name
          </th>
          <th
            class="data-table-header-mission-objective"
          >
            Objective
          </th>
          <th
            class="data-table-header-delta-v text-right"
          >
            Delta V
          </th>
          <th
            class="data-table-header-launch-date text-center"
          >
            Launch Date
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Chronos IX
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Titan
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            1,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            2050
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Chiron X
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Alpha Centauri A
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            10,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            2150
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-mission-name"
          >
            Perseus XI
          </td>
          <td
            class="data-table-cell-mission-objective"
          >
            Andromeda
          </td>
          <td
            class="data-table-cell-delta-v text-right lining-nums tabular-nums"
          >
            100,000 km/s
          </td>
          <td
            class="data-table-cell-launch-date text-center"
          >
            3050
          </td>
          <td
            class="data-table-cell-actions"
          >
            <span
              class="data-table-actions"
            >
              Launch
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;
